--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -32,6 +32,7 @@ src/fe-gtk/joind.c
 src/fe-gtk/maingui.c
 src/fe-gtk/menu.c
 src/fe-gtk/notifygui.c
+src/fe-gtk/plugin-notifications.c
 src/fe-gtk/plugin-tray.c
 src/fe-gtk/plugingui.c
 src/fe-gtk/rawlog.c
